test/conformance/chainsaw/rbac/aggregate-to-view/view-globalcontextentries.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:rbac:view:globalcontextentries
  labels:
    rbac.authorization.k8s.io/aggregate-to-view: "true"
rules:
  - apiGroups:
      - kyverno.io
    resources:
      - globalcontextentries
    verbs:
      - get
      - list
      - watch
