test/conformance/chainsaw/rbac/aggregate-to-view/view-policies.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:rbac:view:policies
  labels:
    rbac.authorization.k8s.io/aggregate-to-view: "true"
rules:
  - apiGroups:
      - kyverno.io
    resources:
      - cleanuppolicies
      - clustercleanuppolicies
      - policies
      - clusterpolicies
      - policyexceptions
    verbs:
      - get
      - list
      - watch
  - apiGroups:
      - policies.kyverno.io
    resources:
      - deletingpolicies
      - generatingpolicies
      - imagevalidatingpolicies
      - mutatingpolicies
      - namespaceddeletingpolicies
      - namespacedgeneratingpolicies
      - namespacedimagevalidatingpolicies
      - namespacedmutatingpolicies
      - namespacedvalidatingpolicies
      - policyexceptions
      - validatingpolicies
    verbs:
      - get
      - list
      - watch
