test/conformance/chainsaw/rbac/aggregate-to-view/view-updaterequests-absent.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:rbac:view:updaterequests
