test/conformance/chainsaw/rbac/aggregate-to-view/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: aggregate-to-view
spec:
  steps:
  - name: step-00
    try:
    - assert:
        file: view-policies.yaml
    - assert:
        file: view-globalcontextentries.yaml
    - error:
        file: view-updaterequests-absent.yaml
